Add left and right adunction rule handling, including tracing.

--- a/src/org/sil/syllableparser/resources/SyllableParser.properties
+++ b/src/org/sil/syllableparser/resources/SyllableParser.properties
@@ -401,6 +401,12 @@ label.npstiruleignoresssp=The rule ignores the SSP.
 label.npstisomesegmentsnotsyllabified=Some segments were not syllabified.
 label.npstisspfailed=SSP failed.
 label.npstissppassed=SSP passed.
+label.npstileftadjoinedsegmenttonbarnode=Left adjoined segment '{0}' to N' node.
+label.npstileftadjoinedsegmenttondoublebarnode=Left adjoined segment '{0}' to N'' node.
+label.npstileftadjoinedsegmenttonnode=Left adjoined segment '{0}' to N node.
+label.npstirightadjoinedsegmenttonbarnode=Right adjoined segment '{0}' to N' node.
+label.npstirightadjoinedsegmenttondoublebarnode=Right adjoined segment '{0}' to N'' node.
+label.npstirightadjoinedsegmenttonnode=Right adjoined segment '{0}' to N node.
 
 # file loading/saving
 file.error=Error
