Add NP to syllabifications comparison

--- a/src/org/sil/syllableparser/resources/SyllableParser.properties
+++ b/src/org/sil/syllableparser/resources/SyllableParser.properties
@@ -515,6 +515,12 @@ report.coda=Coda
 report.moraicapproachabbreviation=Moraic
 report.moraictitle=Moraic Approach Comparison
 report.moraiccomparisonof=Moraic Approach Comparison between:
+report.npapproachabbreviation=NP
+report.nptitle=NP Approach Comparison
+report.npcomparisonof=NP Approach Comparison between:
+report.otapproachabbreviation=OT
+report.ottitle=OT Approach Comparison
+report.otcomparisonof=OT Approach Comparison between:
 report.moras=Moras
 report.syllabificationparameters=Syllabification Parameters
 report.sameonsetmaximization=Onset maximization is the same.
