Improve OT constraint UI

--- a/src/org/sil/syllableparser/resources/SyllableParser.properties
+++ b/src/org/sil/syllableparser/resources/SyllableParser.properties
@@ -168,6 +168,7 @@ label.chooseruleaction=Choose action
 label.chooserulelevel=Choose level
 label.choosesegments=Choose one or more segments
 label.choosesnc=Choose one or more segments and/or natural classes
+label.choosesnc1=Choose one segment or natural class
 label.choosetype=Choose type
 label.close=Close
 label.code=Code
