Put word initial and word final on same line with affected element.

--- a/src/org/sil/syllableparser/resources/SyllableParser.properties
+++ b/src/org/sil/syllableparser/resources/SyllableParser.properties
@@ -673,4 +673,7 @@ nprule.message.adjoin=A Left (or Right) Adjoin action cannot use the ALL level a
 otconstraint.message.element1.cannotbeempty=Affected element 1 cannot be empty
 otconstraint.message.element1.invalidoptions=The first element has invalid structural options; you have at least one of "o", "n", "c", or "u" checked.
 otconstraint.message.element2.invalidoptions=The second element has invalid structural options; you have at least one of "o", "n", "c", or "u" checked.
+otconstraint.message.element1.nowordfinal=The first element cannot be word final when there is a second element.
+otconstraint.message.element2.nowordinitial=The second element cannot be word initial.
 otconstraint.message.element2.optionsignored=The second element's structural options will be ignored.
+otconstraint.message.element2.wordfinalignored=The second element's word final setting will be ignored.
