First pass on rankings UI

--- a/src/org/sil/syllableparser/resources/SyllableParser.properties
+++ b/src/org/sil/syllableparser/resources/SyllableParser.properties
@@ -163,6 +163,8 @@ label.choosecolor=Choose color
 label.choosefont=Choose font information
 label.choosegnc=Choose one or more graphemes and/or grapheme natural classes
 label.choosenc=Choose one or more natural classes
+label.chooseotconstraints=Order constraints in the ranking
+label.chooseotrankinginitialization=Choose a ranking to begin with
 label.choosepredicted=Choose which predicted syllabifications to convert to correct syllabification
 label.chooseruleaction=Choose action
 label.chooserulelevel=Choose level
