--- a/src/org/sil/syllableparser/resources/SyllableParser.properties
+++ b/src/org/sil/syllableparser/resources/SyllableParser.properties
@@ -427,6 +427,7 @@ label.affectedelement2=Affected element 2
 label.any=<Any>
 label.anydescription=[Indicates that any segment will match this constraint part.]
 label.otconstrainttree=Diagram
+label.pruneelement2=Prune element 2
 label.structuraloptions1=Structural options 1
 label.structuraloptions2=Structural options 2
 # file loading/saving
@@ -590,7 +591,7 @@ report.tawmoraicdetails=The details of the segment to natural class mappings, th
 report.tawnpdetails=The details of the segment to natural class mappings and the application of rules is below.  If a step failed, it is in {0}.  Otherwise it is in {2}.
 report.tawnpinfo=Structure or SSP info
 
-report.tawotdetails=The evaluation of constraints (shown via candidate grids) and building of syllables is below.  When a structural option matches for a constraint, it is shown with a {2} background.
+report.tawotdetails=The evaluation of constraints (shown via candidate grids) and building of syllables is below.  If the parse failed, when a structural option matches for a constraint, it is shown with a {0} background.  Otherwise it has a {2} background.
 report.tawotinitialization=Initialization
 report.tawothousekeeping=Word initial/word final Housekeeping
 report.tawotaddsyllable=Adding syllable: {0}.
