--- a/src/org/sil/syllableparser/resources/SyllableParser.properties
+++ b/src/org/sil/syllableparser/resources/SyllableParser.properties
@@ -595,6 +595,9 @@ report.tawotdetails=The evaluation of constraints (shown via candidate grids) an
 report.tawotinitialization=Initialization
 report.tawothousekeeping=Word initial/word final Housekeeping
 report.tawotaddsyllable=Adding syllable: {0}.
+report.tawotsomesegmentsareambiguous=Syllabification failed because one or more segments had two or more structural options left.
+report.tawotunparsedsegments=Syllabification failed because one or more segments were unparsed.
+report.tawotnoconstraints=Syllabification failed because there are no constraints.  Please add some.
 report.failurecolorword=red
 report.matchedcolorword=blue
 report.successcolorword=green
