--- a/src/org/sil/syllableparser/resources/SyllableParser.properties
+++ b/src/org/sil/syllableparser/resources/SyllableParser.properties
@@ -35,6 +35,7 @@ menu.copy=_Copy
 menu.paste=_Paste
 menu.insertnew=_New item
 menu.remove=_Remove item
+menu.duplicateranking=Duplicate OT Constraint Ranking
 menu.nextitem=Ne_xt item
 menu.previousitem=Pre_vious item
 #menu.language=_Language
@@ -65,6 +66,7 @@ menu.about=_About Asheninka
 menu.userdocumentation=User _Documentation
 menu.suggestedsteps=_Suggested Steps
 menu.helpintro=_Introduction to syllabification
+menu.helphammond1997=_Hammond (1997)
 
 # About dialog
 about.header=About Asheninka
