--- a/src/org/sil/syllableparser/resources/SyllableParser.properties
+++ b/src/org/sil/syllableparser/resources/SyllableParser.properties
@@ -603,6 +603,7 @@ report.tawnpinfo=Structure or SSP info
 report.tawotdetails=The evaluation of constraints (shown via candidate grids) and building of syllables is below.  If the parse failed, when a structural option matches for a constraint, it is shown with a {0} background.  Otherwise it has a {2} background.
 report.tawotinitialization=Initialization
 report.tawothousekeeping=Word initial/word final Housekeeping
+report.tawothousekeeping2=Onset before a coda Housekeeping
 report.tawotaddsyllable=Adding syllable: {0}.
 report.tawotnonucleusinsyllable=Syllabification failed because a syllable did not have a nucleus.
 report.tawotsomesegmentsareambiguous=Syllabification failed because one or more segments had two or more structural options left.
