If NP Rules or OT Constraints are empty, ask to create default set

--- a/src/org/sil/syllableparser/resources/SyllableParser.properties
+++ b/src/org/sil/syllableparser/resources/SyllableParser.properties
@@ -323,6 +323,7 @@ label.moraictemplatewarning=WARNING: Rime, nucleus, and coda templates are not i
 label.codasallowed=Codas allowed
 label.maxmoras=Maximum moras per syllable
 label.npfilterwarning=WARNING: Only fail filters are implemented for the NP approach.
+label.npsetdefaultrules=There are no rules yet.  Do you want to create a set of default rules?
 label.weightbyposition=Use weight by position
 label.onsetmaximization=Onset maximization
 label.onsetprinciple=Onset principle
@@ -428,6 +429,7 @@ label.affectedelement2=Affected element 2
 label.any=<Any>
 label.anydescription=[Indicates that any segment will match this constraint part.]
 label.otconstrainttree=Diagram
+label.otsetdefaultconstraints=There are no constraints yet.  Do you want to create a set of default constraints?
 label.pruneelement2=Prune element 2
 label.structuraloptions1=Structural options 1
 label.structuraloptions2=Structural options 2
