--- a/src/org/sil/syllableparser/resources/SyllableParser.properties
+++ b/src/org/sil/syllableparser/resources/SyllableParser.properties
@@ -467,6 +467,8 @@ tooltip.filtercorrectsyllablebreaks=Filter Correct Syllable breaks
 tooltip.filterpredictedsyllablebreaks=Filter Predicted Syllable breaks
 tooltip.filterwords=Filter Words
 tooltip.removeallfilters=Remove All Filters
+tooltip.predictedtototal=Predicted / Total parses
+tooltip.predictedequalscorrecttototal=Predicted equals correct / Total parses
 
 #Radio buttons
 radio.current=Current implementation
