Improve empty list message when converting predicted to correct parses

--- a/src/org/sil/syllableparser/resources/SyllableParser.properties
+++ b/src/org/sil/syllableparser/resources/SyllableParser.properties
@@ -228,7 +228,7 @@ label.name=Name
 label.naturalclasses=Natural Classes
 label.no=No
 # menu.syllabifywords goes at the end of the following message
-label.nopredicted=There are no predicted syllabifications.\nEither there are no words,\nall words failed to syllabify,\nor you need to invoke  
+label.nopredicted=There are no predicted syllabifications.\nEither there are no words,\nthe predicted values are the same as the correct values for all words with a predicted value,\nall words failed to syllabify,\nor you need to invoke  
 # menu.syllabifywords goes at the end of the following message
 label.nopredictedvscorrect=There are no differences between predicted and correct syllabifications.\nEither all predicted syllabifications are correct,\nthere are no words,\nall words failed to syllabify,or\nyou need to invoke 
 label.nprule.action=Action
