--- a/.classpath
+++ b/.classpath
@@ -4,12 +4,12 @@
 	<classpathentry kind="src" path="test"/>
 	<classpathentry kind="con" path="org.eclipse.fx.ide.jdt.core.JAVAFX_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
-	<classpathentry kind="lib" path="diff-match-patch/diff-match-patch.jar"/>
-	<classpathentry kind="lib" path="ControlsFX/controlsfx-8.40.12.jar"/>
-	<classpathentry kind="lib" path="ANTLR/antlr-4.7-complete.jar"/>
+	<classpathentry kind="lib" path="libs/diff-match-patch/diff-match-patch.jar"/>
+	<classpathentry kind="lib" path="libs/ControlsFX/controlsfx-8.40.12.jar"/>
+	<classpathentry kind="lib" path="libs/ANTLR/antlr-4.7-complete.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jdk1.8.0_162"/>
-	<classpathentry kind="lib" path="lingtree/LingTree.jar" sourcepath="/LingTree/src/org/sil/lingtree/model"/>
-	<classpathentry kind="lib" path="ICU/icu4j-67_1.jar"/>
-	<classpathentry kind="lib" path="LibJavaDev/libjavadev-1.4.0.jar"/>
+	<classpathentry kind="lib" path="libs/lingtree/LingTree.jar" sourcepath="/LingTree/src/org/sil/lingtree/model"/>
+	<classpathentry kind="lib" path="libs/ICU/icu4j-67_1.jar"/>
+	<classpathentry kind="lib" path="libs/LibJavaDev/libjavadev-1.6.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
