--- a/build.xml
+++ b/build.xml
@@ -5,41 +5,41 @@
               directory with the processing instruction <?eclipse.ant.import?>
               as the first entry and export the buildfile again. --><project basedir="." default="build" name="asheninka">
     <property environment="env"/>
-    <property name="ECLIPSE_HOME" value="../../../eclipse/java-2023-09/eclipse/"/>
     <property name="junit.output.dir" value="junit"/>
     <property name="debuglevel" value="source,lines,vars"/>
     <property name="target" value="17"/>
     <property name="source" value="17"/>
     <path id="JavaFX SDK.libraryclasspath">
-        <pathelement location="../../../.p2/pool/plugins/org.eclipse.fx.ide.css.jfx8_3.10.0.202303150700.jar"/>
+        <!--        <pathelement location="../../../.p2/pool/plugins/org.eclipse.fx.ide.css.jfx8_3.10.0.202303150700.jar"/>-->
+        <pathelement location="../../../Downloads/Java/AzulZulu/zulu17.30.15-ca-fx-jdk17.0.1-win_x64/bin/javac"/>
     </path>
     <path id="JUnit 4.libraryclasspath">
-        <pathelement location="../../../.p2/pool/plugins/org.junit_4.13.2.v20230809-1000.jar"/>
-        <pathelement location="../../../.p2/pool/plugins/org.hamcrest_2.2.0.jar"/>
-        <pathelement location="../../../.p2/pool/plugins/org.hamcrest.core_2.2.0.v20230809-1000.jar"/>
+        <pathelement location="libs/JUnit/org.junit_4.13.2.v20230809-1000.jar"/>
+        <pathelement location="libs/JUnit/org.hamcrest_2.2.0.jar"/>
+        <pathelement location="libs/JUnit/org.hamcrest.core_2.2.0.v20230809-1000.jar"/>
     </path>
     <path id="asheninka.classpath">
         <pathelement location="bin"/>
         <path refid="JavaFX SDK.libraryclasspath"/>
-        <!--<path refid="JUnit 4.libraryclasspath"/>-->
+        <path refid="JUnit 4.libraryclasspath"/>
         <pathelement location="libs/JAXB/jakarta.activation.jar"/>
         <pathelement location="libs/JAXB/jakarta.xml.bind-api.jar"/>
         <pathelement location="libs/JAXB/jaxb-core.jar"/>
         <pathelement location="libs/JAXB/jaxb-impl.jar"/>
         <pathelement location="libs/JAXB/jaxb-jxc.jar"/>
         <pathelement location="libs/JAXB/jaxb-xjc.jar"/>
+        <pathelement location="libs/Richtextfx/richtextfx-fat-0.11.6.jar"/>
         <pathelement location="libs/jna/jna-5.11.0.jar"/>
         <pathelement location="libs/jna/jna-platform-5.11.0.jar"/>
+        <pathelement location="libs/json/json-20230618.jar"/>
         <pathelement location="libs/ANTLR/antlr-4.7-complete.jar"/>
         <pathelement location="libs/ControlsFX/controlsfx-11.0.2.jar"/>
-        <pathelement location="libs/json/json-20230618.jar"/>
         <pathelement location="libs/LibJavaDev/libjavadev-1.7.1.jar"/>
-        <pathelement location="libs/Richtextfx/richtextfx-fat-0.11.6.jar"/>
         <pathelement location="libs/diff-match-patch/diff-match-patch.jar"/>
         <pathelement location="libs/ICU/icu4j-67_1.jar"/>
         <pathelement location="libs/lingtree/lingtree-1.7.0.jar"/>
     </path>
-<!--    <path id="run.Asheninka.classpath">
+    <path id="run.Asheninka.classpath">
         <path refid="asheninka.classpath"/>
         <path refid="JavaFX SDK.libraryclasspath"/>
         <path refid="JUnit 4.libraryclasspath"/>
@@ -49,55 +49,13 @@
         <pathelement location="libs/JAXB/jaxb-impl.jar"/>
         <pathelement location="libs/JAXB/jaxb-xjc.jar"/>
         <pathelement location="libs/JAXB/jaxb-jxc.jar"/>
+        <pathelement location="libs/Richtextfx/richtextfx-fat-0.11.6.jar"/>
         <pathelement location="libs/jna/jna-5.11.0.jar"/>
         <pathelement location="libs/jna/jna-platform-5.11.0.jar"/>
+        <pathelement location="libs/json/json-20230618.jar"/>
         <pathelement location="libs/ANTLR/antlr-4.7-complete.jar"/>
         <pathelement location="libs/ControlsFX/controlsfx-11.0.2.jar"/>
-        <pathelement location="libs/json/json-20230618.jar"/>
         <pathelement location="libs/LibJavaDev/libjavadev-1.7.1.jar"/>
-        <pathelement location="libs/Richtextfx/richtextfx-fat-0.11.6.jar"/>
-        <pathelement location="libs/diff-match-patch/diff-match-patch.jar"/>
-        <pathelement location="libs/ICU/icu4j-67_1.jar"/>
-        <pathelement location="libs/lingtree/lingtree-1.7.0.jar"/>
-    </path>-->
-<!--    <path id="run.ONCApproachLanguageComparisonHTMLFormatterTest.classpath">
-        <path refid="asheninka.classpath"/>
-        <path refid="JavaFX SDK.libraryclasspath"/>
-        <path refid="JUnit 4.libraryclasspath"/>
-        <pathelement location="libs/JAXB/jakarta.activation.jar"/>
-        <pathelement location="libs/JAXB/jakarta.xml.bind-api.jar"/>
-        <pathelement location="libs/JAXB/jaxb-core.jar"/>
-        <pathelement location="libs/JAXB/jaxb-impl.jar"/>
-        <pathelement location="libs/JAXB/jaxb-xjc.jar"/>
-        <pathelement location="libs/JAXB/jaxb-jxc.jar"/>
-        <pathelement location="libs/jna/jna-5.11.0.jar"/>
-        <pathelement location="libs/jna/jna-platform-5.11.0.jar"/>
-        <pathelement location="libs/ANTLR/antlr-4.7-complete.jar"/>
-        <pathelement location="libs/ControlsFX/controlsfx-11.0.2.jar"/>
-        <pathelement location="libs/json/json-20230618.jar"/>
-        <pathelement location="libs/LibJavaDev/libjavadev-1.7.1.jar"/>
-        <pathelement location="libs/Richtextfx/richtextfx-fat-0.11.6.jar"/>
-        <pathelement location="libs/diff-match-patch/diff-match-patch.jar"/>
-        <pathelement location="libs/ICU/icu4j-67_1.jar"/>
-        <pathelement location="libs/lingtree/lingtree-1.7.0.jar"/>
-    </path>
-    <path id="run.OTApproachLanguageComparisonHTMLFormatterTest.classpath">
-        <path refid="asheninka.classpath"/>
-        <path refid="JavaFX SDK.libraryclasspath"/>
-        <path refid="JUnit 4.libraryclasspath"/>
-        <pathelement location="libs/JAXB/jakarta.activation.jar"/>
-        <pathelement location="libs/JAXB/jakarta.xml.bind-api.jar"/>
-        <pathelement location="libs/JAXB/jaxb-core.jar"/>
-        <pathelement location="libs/JAXB/jaxb-impl.jar"/>
-        <pathelement location="libs/JAXB/jaxb-xjc.jar"/>
-        <pathelement location="libs/JAXB/jaxb-jxc.jar"/>
-        <pathelement location="libs/jna/jna-5.11.0.jar"/>
-        <pathelement location="libs/jna/jna-platform-5.11.0.jar"/>
-        <pathelement location="libs/ANTLR/antlr-4.7-complete.jar"/>
-        <pathelement location="libs/ControlsFX/controlsfx-11.0.2.jar"/>
-        <pathelement location="libs/json/json-20230618.jar"/>
-        <pathelement location="libs/LibJavaDev/libjavadev-1.7.1.jar"/>
-        <pathelement location="libs/Richtextfx/richtextfx-fat-0.11.6.jar"/>
         <pathelement location="libs/diff-match-patch/diff-match-patch.jar"/>
         <pathelement location="libs/ICU/icu4j-67_1.jar"/>
         <pathelement location="libs/lingtree/lingtree-1.7.0.jar"/>
@@ -112,30 +70,28 @@
         <pathelement location="libs/JAXB/jaxb-impl.jar"/>
         <pathelement location="libs/JAXB/jaxb-xjc.jar"/>
         <pathelement location="libs/JAXB/jaxb-jxc.jar"/>
+        <pathelement location="libs/Richtextfx/richtextfx-fat-0.11.6.jar"/>
         <pathelement location="libs/jna/jna-5.11.0.jar"/>
         <pathelement location="libs/jna/jna-platform-5.11.0.jar"/>
+        <pathelement location="libs/json/json-20230618.jar"/>
         <pathelement location="libs/ANTLR/antlr-4.7-complete.jar"/>
         <pathelement location="libs/ControlsFX/controlsfx-11.0.2.jar"/>
-        <pathelement location="libs/json/json-20230618.jar"/>
         <pathelement location="libs/LibJavaDev/libjavadev-1.7.1.jar"/>
-        <pathelement location="libs/Richtextfx/richtextfx-fat-0.11.6.jar"/>
         <pathelement location="libs/diff-match-patch/diff-match-patch.jar"/>
         <pathelement location="libs/ICU/icu4j-67_1.jar"/>
         <pathelement location="libs/lingtree/lingtree-1.7.0.jar"/>
-    </path>-->
+    </path>
     <target name="init">
         <mkdir dir="bin"/>
         <copy includeemptydirs="false" todir="bin">
             <fileset dir="src">
                 <exclude name="**/*.launch"/>
-                <exclude name="**/*.xtend"/>
                 <exclude name="**/*.java"/>
             </fileset>
         </copy>
         <copy includeemptydirs="false" todir="bin">
             <fileset dir="test">
                 <exclude name="**/*.launch"/>
-                <exclude name="**/*.xtend"/>
                 <exclude name="**/*.java"/>
             </fileset>
         </copy>
@@ -148,51 +104,20 @@
     <target name="build-subprojects"/>
     <target depends="init" name="build-project">
         <echo message="${ant.project.name}: ${ant.file}"/>
-        <javac debug="true" debuglevel="${debuglevel}" destdir="bin" includeantruntime="false" source="${source}" target="${target}">
+        <javac debug="true" debuglevel="${debuglevel}" destdir="bin" encoding="utf-8" includeantruntime="false" source="${source}" target="${target}">
             <src path="src"/>
             <src path="test"/>
-            <classpath refid="asheninka.classpath"/>
+            <modulepath refid="asheninka.classpath"/>
         </javac>
     </target>
     <target description="Build all projects which reference this project. Useful to propagate changes." name="build-refprojects"/>
-    <target description="copy Eclipse compiler jars to ant lib directory" name="init-eclipse-compiler">
-        <copy todir="${ant.library.dir}">
-            <fileset dir="${ECLIPSE_HOME}/plugins" includes="org.eclipse.jdt.core_*.jar"/>
-        </copy>
-        <unzip dest="${ant.library.dir}">
-            <patternset includes="jdtCompilerAdapter.jar"/>
-            <fileset dir="${ECLIPSE_HOME}/plugins" includes="org.eclipse.jdt.core_*.jar"/>
-        </unzip>
-    </target>
-    <target description="compile project with Eclipse compiler" name="build-eclipse-compiler">
-        <property name="build.compiler" value="org.eclipse.jdt.core.JDTCompilerAdapter"/>
-        <antcall target="build"/>
-    </target>
     <target name="Asheninka">
         <java classname="org.sil.syllableparser.MainApp" failonerror="true" fork="yes">
             <jvmarg line="--add-exports javafx.base/com.sun.javafx.event=org.controlsfx.controls"/>
             <classpath refid="run.Asheninka.classpath"/>
         </java>
     </target>
-<!--    <target name="ONCApproachLanguageComparisonHTMLFormatterTest">
-        <mkdir dir="${junit.output.dir}"/>
-        <junit fork="yes" printsummary="withOutAndErr">
-            <formatter type="xml"/>
-            <test name="org.sil.syllableparser.service.comparison.ONCApproachLanguageComparisonHTMLFormatterTest" todir="${junit.output.dir}"/>
-            <jvmarg line="-ea"/>
-            <classpath refid="run.ONCApproachLanguageComparisonHTMLFormatterTest.classpath"/>
-        </junit>
-    </target>
-    <target name="OTApproachLanguageComparisonHTMLFormatterTest">
-        <mkdir dir="${junit.output.dir}"/>
-        <junit fork="yes" printsummary="withOutAndErr">
-            <formatter type="xml"/>
-            <test name="org.sil.syllableparser.service.comparison.OTApproachLanguageComparisonHTMLFormatterTest" todir="${junit.output.dir}"/>
-            <jvmarg line="-ea"/>
-            <classpath refid="run.OTApproachLanguageComparisonHTMLFormatterTest.classpath"/>
-        </junit>
-    </target>-->
-<!--    <target name="test (9)">
+    <target name="test (9)">
         <mkdir dir="${junit.output.dir}"/>
         <junit fork="yes" printsummary="withOutAndErr">
             <formatter type="xml"/>
@@ -280,5 +205,5 @@
             </fileset>
             <report format="frames" todir="${junit.output.dir}"/>
         </junitreport>
-    </target>-->
+    </target>
 </project>
