Add keyboard setting in UI

--- a/src/org/sil/syllableparser/resources/SyllableParser.properties
+++ b/src/org/sil/syllableparser/resources/SyllableParser.properties
@@ -202,6 +202,7 @@ label.filtercorrectsyllablebreaks=Filter correct syllable breaks
 label.filterpredictedsyllablebreaks=Filter predicted syllable breaks
 label.filterwords=Filter words
 label.font=Font
+label.keyboard=Keyboard
 label.general=General
 label.help=Help
 label.hyphenationparameters=Hyphenation parameters for {0}
